@@ -513,7 +513,6 @@ Bool gf_isom_has_time_offset(GF_ISOFile *the_file, u32 trackNumber);
 for the current time*/
 u64 gf_isom_estimate_size(GF_ISOFile *the_file);
 
-
 /*
 		MPEG-4 Systems extensions
 */
@@ -727,6 +726,8 @@ GF_Err gf_isom_set_track_reference(GF_ISOFile *the_file, u32 trackNumber, u32 re
 /*removes a track reference*/
 GF_Err gf_isom_remove_track_reference(GF_ISOFile *the_file, u32 trackNumber, u32 referenceType, u32 ReferenceIndex);
 
+/*sets track handler name*/
+GF_Err gf_isom_set_handler_name(GF_ISOFile *the_file, u32 trackNumber, const char *nameUTF8);
 
 /*Update the sample size table - this is needed when using @gf_isom_append_sample_data in case the resulting samples
 are of same sizes (typically in 3GP speech tracks)*/
