@@ -1,4 +1,7 @@
-Latest CVS Changes 01/11/05
+Latest CVS Changes 08/11/05
+  - added SAX support in gpac XML parser to avoid dependency on libxml when unneeded
+  - added new svg_in module using gpac sax parser (supports progressive loading too)
+  - added "-name" option to MP4Box (track import and general cmd line opt) for setting the track handler name
   - added support for SVG scripting (ecmascript through SpiderMonkey) - most of microDOM is supported, except presentation traits.
   - added support for SVG events (DOM)
   - added support for SVG scene dumping
